--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ passlib==1.7.4
 keras==2.4.3
 scikit-learn==0.24.2
 Flask-MySQLdb==0.2.0
-tensorflow==2.3.0 
+tensorflow==2.3.0
+email-validator==1.1.2 
