--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ keras==2.4.3
 scikit-learn==0.24.2
 Flask-MySQLdb==0.2.0
 tensorflow==2.3.0
-email-validator==1.1.2 
+email-validator==1.1.2
+tfx==0.30.0 
